--- a/.github/workflows/Imprimir.yml
+++ b/.github/workflows/Imprimir.yml
@@ -21,5 +21,5 @@ jobs:
           echo "tabla desde la fuente"
           cat datos.csv
           echo "filtrando datos"
-          grep -iv hotmail data.csv
+          grep -iv hotmail datos.csv
           
