--- a/.github/workflows/Imprimir_Guardar.yml
+++ b/.github/workflows/Imprimir_Guardar.yml
@@ -6,6 +6,8 @@ on:
 
 jobs:
   Analizar_Tabla:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -22,4 +24,15 @@ jobs:
           cat datos.csv
           echo "filtrando datos"
           grep -iv hotmail datos.csv
+      - name: Commit results
+        if: always()
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git diff --quiet || git stash
+          git pull --rebase origin main
+          git stash list | grep "stash@{0}" && git stash apply
+          git add .
+          git diff --cached --exit-code || git commit -m "Add earnings output" --allow-empty
+          git push --force-with-lease origin HEAD:main
           
