--- a/.github/workflows/Imprimir_Guardar_Filtro.yml
+++ b/.github/workflows/Imprimir_Guardar_Filtro.yml
@@ -33,6 +33,6 @@ jobs:
           git pull --rebase origin main
           git stash list | grep "stash@{0}" && git stash apply
           git add .
-          git diff --cached --exit-code || git commit -m "Add earnings output" --allow-empty
+          git diff --cached --exit-code || git commit -m "Tabla Actualizada" --allow-empty
           git push --force-with-lease origin HEAD:main
           
