--- a/.github/workflows/Imprimir_Guardar_Filtro.yml
+++ b/.github/workflows/Imprimir_Guardar_Filtro.yml
@@ -23,7 +23,7 @@ jobs:
           echo "tabla desde la fuente"
           cat datos.csv
           echo "filtrando datos"
-          grep -iv hotmail | grep -v 15 datos.csv > datos_filtrados.csv
+          grep -iv hotmail datos.csv | grep -v 15 > datos_filtrados.csv
       - name: Commit results
         if: always()
         run: |
