--- a/.github/workflows/_Trabajo.yml
+++ b/.github/workflows/_Trabajo.yml
@@ -36,7 +36,7 @@ jobs:
           git diff --cached --exit-code || git commit -m "Tabla Actualizada" --allow-empty
           git push --force-with-lease origin HEAD:main
   viendo_datos:
-    needs: analizando_datos
+    needs: Analizar_Tabla
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
