--- a/.github/workflows/_Trabajo.yml
+++ b/.github/workflows/_Trabajo.yml
@@ -1,4 +1,4 @@
-name: Impresion de Datos/Guardar/Filtrar
+name: Impresion de TrabajoParalelo
 on:
   schedule:
      - cron: '00 0 * * WED' # Runs every day at 00:00 UTC
