--- a/.github/workflows/_Trabajo.yml
+++ b/.github/workflows/_Trabajo.yml
@@ -24,6 +24,7 @@ jobs:
           cat datos.csv
           echo "filtrando datos"
           grep -iv hotmail datos.csv > datos_filtrados.csv
+          grep -v 14 datos.cvs > datos_filtrados.cvs
       - name: Commit results
         if: always()
         run: |
