--- a/.github/workflows/_Trabajo.yml
+++ b/.github/workflows/_Trabajo.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: imprimir tabla bruta y neta
+      - name: imprimir tablas
         run: |
           echo "tabla desde la fuente"
           cat datos.csv
