--- a/.github/workflows/_Trabajo.yml
+++ b/.github/workflows/_Trabajo.yml
@@ -24,7 +24,7 @@ jobs:
           cat datos.csv
           
           echo "filtrando datos"
-          grep -iv hotmail datos.csv > datos_filtrados.csv | grep -iv 14 datos.csv > datos_filtrados.csv
+          grep -iv hotmail datos.csv > datos_filtrados.csv | grep -v 14 datos.csv > datos_filtrados.csv
       - name: Commit results
         if: always()
         run: |
